@@ -9,6 +9,7 @@ Version 1.8.0+git:
        * wesnoth.get_sides() -> wesnoth.sides.find()
        * wesnoth.set_variable() -> wml.variables[]
        * wesnoth.get_variable() -> wml.variables[]
+       * wesnoth.get_map_size() -> wesnoth.current.map.playable_width/playable_height/border_size
    * Deprecated `[get_numerical_minimum]`, `[get_numerical_maximum]` and `[reverse_value]`
    * Fixed a bug that made `[unknown_message]` not working
    * Bumped Wesnoth version requirement to 1.15.14
